--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.17.2",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
