Feat: 서버 배포 후 연결

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ REACT_APP_FB_STORAGE_BUCKET="zzupzzup-d3969.appspot.com"
 REACT_APP_FB_MESSAGING_SENDER_ID="928304332915"
 REACT_APP_FB_API_ID="1:928304332915:web:e48ade6b058822fa026a06"
 
-REACT_APP_BASE_URL = 'http://127.0.0.1:8000'
+REACT_APP_BASE_URL = 'https://port-0-zzupzzup-1io3t2blg2fimlq.sel3.cloudtype.app'
