--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ REACT_APP_FB_STORAGE_BUCKET="zzupzzup-d3969.appspot.com"
 REACT_APP_FB_MESSAGING_SENDER_ID="928304332915"
 REACT_APP_FB_API_ID="1:928304332915:web:e48ade6b058822fa026a06"
 
-REACT_APP_BASE_URL = 'https://port-0-zzup-back-crjhvk2blgdfx2ox.sel3.cloudtype.app'
+REACT_APP_BASE_URL = 'http://15.165.169.55'
